# SalesAIMVP

./: .env  ARCHITECTURE.md  FRONTEND_INTEGRATION.md  QUICKSTART.md  index.html  package.json  pnpm-lock.yaml  readme.md  run-all.sh  run-orchestration.sh  vite.config.ts
client/: .env.example  App.tsx  global.css
client/components/dashboard/: BriefingDisplay.tsx  BriefingInsight.tsx  IntentSpikesAlert.tsx  RoleToggle.tsx  UpcomingMeetings.tsx
client/components/in-flight/: EngagementThrottle.tsx  EscalateButton.tsx  RebuttalsPanel.tsx  TalkTrackSidebar.tsx
client/components/meeting-brief/: Citations.tsx  ConfidenceMeter.tsx  FinancialPulse.tsx  IceBreakers.tsx  ValueMap.tsx
client/hooks/: useBriefing.ts  useIntentSpikes.ts  useMeetings.ts  useRole.ts
client/layouts/: MainLayout.tsx
client/lib/: mockData.ts  orchestrationClient.ts
client/pages/: InFlightAssistant.tsx  Index.tsx  MeetingBrief.tsx
orchestration/: .env.example  README.md  app.py  orchestration.py  pyproject.toml
orchestration/src/: config.py  llm.py  main.py  models.py  retriever.py
server/: index.ts
server/ingestion/: README.md  package.json  pnpm-lock.yaml
server/ingestion/src/: groqClient.ts  index.ts  normalizer.ts  rabbit.ts
server/ingestion/src/ingestors/: news.ts  sec.ts  social.ts
server/routes/: briefing.ts
